server/k8s/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: server
  namespace: server-backend
  labels:
    app: server
spec:
  selector:
    matchLabels:
      app: server
  replicas: 2
  strategy:
    canary:
      stableService: server-service
      canaryService: server-canary-svc
      steps:
        - setWeight: 10
        - pause: { duration: 1m }
        - setWeight: 30
        - pause: { duration: 1m }
        - setWeight: 60
        - pause: { duration: 1m }

      # analysis rollback via prometheus
      analysis:
        startingStep: 2
        templates:
          - templateName: server-success-rate
        args:
          - name: service-name
            value: server-service
  template:
    metadata:
      labels:
        app: server
    spec:
      securityContext:
        runAsNonRoot: true
      terminationGracePeriodSeconds: 60
      containers:
        - name: server
          securityContext:
            allowPrivilegeEscalation: false
          image: 526335608044.dkr.ecr.eu-north-1.amazonaws.com/server-backend/ai-website:sha256:531da5d1d9dbd3238393f437537f6fd874b7b344d519def58e8f05d6c38f7d08
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: 250m
              memory: 252Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          lifecycle:
            preStop:
              exec:
                command: ['bin/sh', '-c', 'sleep 15']
