server/k8s/canary-service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: server-canary-svc
  namespace: server-backend
  labels:
    app: server 
    role: canary
    environment: production
spec:
  selector:
    app: server
  type: ClusterIP
  ports:
  - name: myjob
    protocol: TCP
    port: 80
    targetPort: 3000
  sessionAffinity: None
