server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: server-backend
spec:
  selector:
    app: server-service
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: server-service
    protocol: TCP
    port: 80
    targetPort: 3000
